kustomize/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubecraft-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - $(DOMAIN)
    port:
      name: minecraft
      number: 25565
      protocol: UDP
